@@ -4,7 +4,7 @@ supportexecincludedir = $(includedir)/gnome/$(GNOME_INTERFACE_VERSION)
 
 INCLUDES = -D_GNU_SOURCE
 
-lib_LTLIBRARIES = libgnomesupport-1.3.la
+lib_LTLIBRARIES = libgnomesupport-2.0.la
 
 # it is in _DATA since we don't want `gnomesupport.h' to be part of
 # the distributed `.tar.gz' file
@@ -21,9 +21,9 @@ supportexecinclude_DATA = gnomesupport.h
 #popt_sources = findme.c poptconfig.c poptparse.c popt.c popthelp.c
 popt_sources=
 
-libgnomesupport_1_3_la_SOURCES = gnomesupport.h $(popt_sources) gnome-argp.c
-libgnomesupport_1_3_la_LIBADD  = @LTLIBOBJS@
-libgnomesupport_1_3_la_LDFLAGS = -version-info 0:0:0
+libgnomesupport_2_0_la_SOURCES = gnomesupport.h $(popt_sources) gnome-argp.c
+libgnomesupport_2_0_la_LIBADD  = @LTLIBOBJS@
+libgnomesupport_2_0_la_LDFLAGS = -version-info 0:0:0
 
 BUILT_SOURCES = gnomesupport.h
 
@@ -46,3 +46,4 @@ EXTRA_DIST = gnomesupport.awk README-gnome \
 
 pkgconfigdir = $(libdir)/pkgconfig
 pkgconfig_DATA = gnome-support-2.0.pc
+
